--- a/index.ipynb
+++ b/index.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "(0.5393518518518512, 6.379629629629633)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,8 +217,8 @@
     "    \n",
     "    return m, b\n",
     "\n",
-    "m, b = best_fit(X,Y)\n",
-    "m,b"
+    "c, b = best_fit(X,Y)\n",
+    "c,b"
    ]
   },
   {
