Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -188,7 +188,8 @@
    "outputs": [],
    "source": [
     "# use the slope function with intercept formula to return calculate slop and intercept from data points\n",
-    "\n",
+    "def best_fit(xs,ys):\n",
+    "    \n",
     "# (0.5393518518518512, 6.379629629629633)"
    ]
   },
