--- a/index.ipynb
+++ b/index.ipynb
@@ -189,7 +189,8 @@
    "source": [
     "# use the slope function with intercept formula to return calculate slop and intercept from data points\n",
     "def best_fit(xs,ys):\n",
-    "    y_bar = \n",
+    "    y_bar = np.mean(ys)\n",
+    "    return y\n",
     "# (0.5393518518518512, 6.379629629629633)"
    ]
   },
