Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -183,14 +183,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# use the slope function with intercept formula to return calculate slop and intercept from data points\n",
     "def best_fit(xs,ys):\n",
     "    y_bar = np.mean(ys)\n",
-    "    return y\n",
+    "    return y_bar\n",
+    "\n",
+    "best_fit(xs,y)\n",
     "# (0.5393518518518512, 6.379629629629633)"
    ]
   },
