Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -199,7 +199,8 @@
     "# use the slope function with intercept formula to return calculate slop and intercept from data points\n",
     "def best_fit(xs,ys):\n",
     "    y_bar = np.mean(ys)\n",
-    "    m = calc_slope(xs,)\n",
+    "    m = calc_slope(xs,ys)\n",
+    "    x_bar = np.mea\n",
     "    return y_bar\n",
     "\n",
     "best_fit(X,Y)\n",
