Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "9.4"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,8 +200,8 @@
     "def best_fit(xs,ys):\n",
     "    y_bar = np.mean(ys)\n",
     "    m = calc_slope(xs,ys)\n",
-    "    x_bar = np.mea\n",
-    "    return y_bar\n",
+    "    x_bar = np.mean(xs)\n",
+    "    return y_bar - ()\n",
     "\n",
     "best_fit(X,Y)\n",
     "# (0.5393518518518512, 6.379629629629633)"
