Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -181,16 +181,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9.4"
+       "6.379629629629633"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
     "    y_bar = np.mean(ys)\n",
     "    m = calc_slope(xs,ys)\n",
     "    x_bar = np.mean(xs)\n",
-    "    return y_bar - ()\n",
+    "    return y_bar - (m*x_bar)\n",
     "\n",
     "best_fit(X,Y)\n",
     "# (0.5393518518518512, 6.379629629629633)"
