Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -203,7 +203,7 @@
     "    x_bar = np.mean(xs)\n",
     "    return y_bar - (m*x_bar)\n",
     "\n",
-    "best_fit(X,Y)\n",
+    "m, b = best_fit(X,Y)\n",
     "# (0.5393518518518512, 6.379629629629633)"
    ]
   },
