--- a/index.ipynb
+++ b/index.ipynb
@@ -200,7 +200,7 @@
     "def best_fit(xs,ys):\n",
     "    y_bar = np.mean(ys)\n",
     "    m = calc_slope(xs,ys)\n",
-    "    x_bar = np.mean(xs)\n",
+    "    b = np.mean(xs)\n",
     "    return y_bar - (m*x_bar)\n",
     "\n",
     "b = best_fit(X,Y)\n",
