Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -181,16 +181,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6.379629629629633"
+       "(0.5393518518518512, 6.379629629629633)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,10 +198,9 @@
    "source": [
     "# use the slope function with intercept formula to return calculate slop and intercept from data points\n",
     "def best_fit(xs,ys):\n",
-    "    y_bar = np.mean(ys)\n",
     "    m = calc_slope(xs,ys)\n",
-    "    b = np.mean(ys) - m*np.mean(x)\n",
-    "    return y_bar - (m*x_bar)\n",
+    "    b = np.mean(ys) - m*np.mean(xs)\n",
+    "    return m,b\n",
     "\n",
     "b = best_fit(X,Y)\n",
     "b\n",
