--- a/index.ipynb
+++ b/index.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "(0.5393518518518512, 6.379629629629633)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,8 +202,8 @@
     "    b = np.mean(ys) - m*np.mean(xs)\n",
     "    return m,b\n",
     "\n",
-    "b = best_fit(X,Y)\n",
-    "b\n",
+    "m, b = best_fit(X,Y)\n",
+    "m, b\n",
     "# (0.5393518518518512, 6.379629629629633)"
    ]
   },
