--- a/index.ipynb
+++ b/index.ipynb
@@ -238,7 +238,9 @@
    "outputs": [],
    "source": [
     "def reg_line (m, b, xs):\n",
-    "    l\n",
+    "    lines = []\n",
+    "    for i in xs:\n",
+    "        y\n",
     "\n",
     "# Uncomment below\n",
     "#regression_line = reg_line(m,b,X)"
