Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -239,8 +239,9 @@
    "source": [
     "def reg_line (m, b, xs):\n",
     "    lines = []\n",
-    "    for i in xs:\n",
-    "        y = m*\n",
+    "    for x in xs:\n",
+    "        y = m*x + b\n",
+    "        line\n",
     "\n",
     "# Uncomment below\n",
     "#regression_line = reg_line(m,b,X)"
