Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -231,20 +231,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 34,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def reg_line (m, b, xs):\n",
     "    lines = []\n",
     "    for x in xs:\n",
     "        y = m*x + b\n",
-    "        line\n",
-    "\n",
+    "        lines.append(y)\n",
+    "    return lines\n",
     "# Uncomment below\n",
-    "#regression_line = reg_line(m,b,X)"
+    "regression_line = reg_line(m,b,X)"
    ]
   },
   {
