--- a/index.ipynb
+++ b/index.ipynb
@@ -231,9 +231,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6.9189814814814845,\n",
+       " 7.458333333333336,\n",
+       " 7.997685185185187,\n",
+       " 8.537037037037038,\n",
+       " 9.07638888888889,\n",
+       " 9.61574074074074,\n",
+       " 10.694444444444443,\n",
+       " 10.694444444444443,\n",
+       " 11.233796296296294,\n",
+       " 11.773148148148145]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def reg_line (m, b, xs):\n",
     "    lines = []\n",
@@ -242,7 +262,8 @@
     "        lines.append(y)\n",
     "    return lines\n",
     "# Uncomment below\n",
-    "regression_line = reg_line(m,b,X)"
+    "regression_line = reg_line(m,b,X)\n",
+    "regression_line"
    ]
   },
   {
