--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,8 @@
     }
    ],
    "source": [
-    "# Plot data and regression line"
+    "# Plot data and regression line\n",
+    "plt.scatter()"
    ]
   },
   {
