Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
    ],
    "source": [
     "# Plot data and regression line\n",
-    "plt.scatter()"
+    "plt.scatter(X,Y, label= 'Data Poin')"
    ]
   },
   {
