--- a/index.ipynb
+++ b/index.ipynb
@@ -275,16 +275,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fe8e5e48198>]"
+       "[<matplotlib.lines.Line2D at 0x7fe8e5da6e10>]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -302,7 +302,7 @@
    "source": [
     "# Plot data and regression line\n",
     "plt.scatter(X,Y, label= 'Data Points')\n",
-    "plt.plot(X, regression_line, la)"
+    "plt.plot(X, regression_line, label= 'Regression Line')"
    ]
   },
   {
