Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -335,14 +335,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.155092592592592"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x_new = 7\n",
-    "y_predicted = (m*x)\n",
+    "y_predicted = (m*x_new)+b\n",
     "y_predicted\n",
     "\n",
     "# 10.155092592592592"
